--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
 	"keywords": [],
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/Frintest/clatum.git"
+		"url": "git+https://github.com/frintest/clatum.git"
 	},
-	"homepage": "https://github.com/Frintest/clatum#readme",
+	"homepage": "https://github.com/frintest/clatum#readme",
 	"scripts": {
 		"start": "webpack serve --config webpack.dev.js",
 		"dev": "webpack --config webpack.dev.js",
@@ -22,6 +22,7 @@
 		"@babel/preset-env": "^7.15.4",
 		"babel-loader": "^8.2.2",
 		"css-loader": "^6.2.0",
+		"css-minimizer-webpack-plugin": "^3.2.0",
 		"html-webpack-plugin": "^5.3.2",
 		"mini-css-extract-plugin": "^2.2.2",
 		"sass": "^1.39.0",
