--- a/.github/workflows/webpack-build.yml
+++ b/.github/workflows/webpack-build.yml
@@ -5,6 +5,7 @@ permissions:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    using: 'node20'
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
