--- a/.github/workflows/webpack-build.yml
+++ b/.github/workflows/webpack-build.yml
@@ -2,10 +2,12 @@ name: Build Webpack
 on: workflow_dispatch
 permissions:
   contents: write
+runs:
+  using: 'node20'
+  main: './src/public/index.js'
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    using: 'node20'
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
