add github action workflow

--- a/.github/workflows/webpack-build.yml
+++ b/.github/workflows/webpack-build.yml
@@ -19,6 +19,7 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: dist
+          target-folder: /
       
       # - name: Run 🏃
       #   run: |
