add github action workflow

--- a/.github/workflows/webpack-build.yml
+++ b/.github/workflows/webpack-build.yml
@@ -1,5 +1,8 @@
 name: Build Webpack
-on: workflow_dispatch
+on:
+  push:
+    branches:
+      - main
 permissions:
   contents: write
 jobs:
@@ -19,10 +22,3 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: dist
-          subfolder: "/"  # Укажите здесь нужный вам подкаталог
-          deploy-token: ${{ secrets.GITHUB_TOKEN }}
-          branch: gh-pages  # Измените на вашу целевую ветку Pages
-      
-      # - name: Run 🏃
-      #   run: |
-      #     node20 './src/public/index.js'
