--- a/.github/workflows/webpack-build.yml
+++ b/.github/workflows/webpack-build.yml
@@ -22,3 +22,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: dist
+          branch: gh-pages
+          target-folder: .
