--- a/.github/workflows/webpack-build.yml
+++ b/.github/workflows/webpack-build.yml
@@ -1,8 +1,5 @@
 name: Build Webpack
-on:
-  push:
-    branches:
-      - main
+on: workflow_dispatch
 permissions:
   contents: write
 jobs:
@@ -24,4 +21,3 @@ jobs:
           folder: dist
           branch: gh-pages
           target-folder: .
-# 
