--- a/.github/workflows/webpack-build.yml
+++ b/.github/workflows/webpack-build.yml
@@ -1,5 +1,8 @@
-name: Build Webpack
-on: workflow_dispatch
+name:
+  Build Webpack
+on:
+  workflow_dispatch
+
 permissions:
   contents: write
 jobs:
@@ -18,6 +21,5 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: dist
+          folder: .
           branch: gh-pages
-          target-folder: .
