add github action workflow

--- a/.github/workflows/webpack-build.yml
+++ b/.github/workflows/webpack-build.yml
@@ -1,8 +1,5 @@
-name:
-  Build Webpack
-on:
-  workflow_dispatch
-
+name: Build Webpack
+on: workflow_dispatch
 permissions:
   contents: write
 jobs:
