--- a/.github/workflows/webpack-build.yml
+++ b/.github/workflows/webpack-build.yml
@@ -21,6 +21,6 @@ jobs:
           folder: dist
           branch: gh-pages
           clean: true
-        run: |
-          git checkout gh-pages
-          mv public/* .
+        # run: |
+        #   git checkout gh-pages
+        #   mv public/* .
