add github action workflow

--- a/.github/workflows/webpack-build.yml
+++ b/.github/workflows/webpack-build.yml
@@ -28,4 +28,5 @@ jobs:
           mv public/* .
           git add .
           git commit -m "moving from public to root"
+          git pull origin gh-pages --rebase
           git push origin gh-pages
